# minireload

./: LICENSE  README.md  pyproject.toml
example/: impl.py  main.py
src/minireload/: __init__.py  autoreload.py  main.py  reloader.py
