[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minireload"
version = "0.0.7"
authors = [
  { name="Jona Ruof", email="jona.ruof@uni-ulm.de" },
]
description = "Small library for live code reloading"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "watchdog >= 4.0.0"
]

[project.urls]
"Homepage" = "https://github.com/joruof/minireload"
"Bug Tracker" = "https://github.com/joruof/minireload/issues"
